--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.3",
+    "hls.js": "^1.3.0-beta.2.0.canary.8788",
     "iframe-resizer-react": "^1.1.0",
+    "plyr": "^3.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-iframe": "^1.8.5",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "shaka-player-react": "^1.1.5",
+    "video-react": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
