--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-iframe": "^1.8.5",
+    "react-paginate": "^8.1.4",
     "react-player": "^2.10.1",
+    "react-responsive-pagination": "^1.10.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "shaka-player-react": "^1.1.5",
